# acoustid-index

./: .bzrignore  .clang-format  .coderabbit.yaml  .gitignore  .gitlab-ci.yml  .travis.yml  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  PLAN.md  README  README-development.md  README.md  benchmark.py  build.zig  build.zig.zon  check.sh  connection.cpp  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  fpdumpindex.cpp  fpindex.cpp  fpsearch.cpp  fpsearch2.cpp  generate_shuffle_tables.py  listener.cpp  listener.h  main.cpp  run-tests.sh  run_tests.sh  store-unique-hashes-only.md  test-setup.sh  test_runner.zig  timer.h  update_proto.sh
.github/workflows/: build-fpindex-cluster.yml  build-legacy-proxy.yml  build.yml  claude.yml  codeql-analysis.yml
api/: index.yaml
ci/: Dockerfile  Dockerfile.build  build-image.sh  docker-entrypoint.sh
cluster/: Dockerfile  README.md  __main__.py  check.sh  pyproject.toml  requirements.txt
cluster/fpindexcluster/: __main__.py  cli.py  errors.py  manager.py  models.py  server.py
cluster/src/fpindexcluster/: __init__.py  __main__.py  config.py  models.py  proxy_service.py  updater_service.py
cluster/tests/: conftest.py  test_basic.py  test_manager.py  test_proxy_service.py  test_server.py  test_updater_service.py
cmake/modules/: FindGTest.cmake
dev/: nats-stream-config.json  requirements.txt  setup-nats-streams.sh  test-fpindex-api.py
doc/: rest-api.md  tree_structure.odg
legacy-proxy/: Dockerfile  legacy-proxy  proxy.py
lib/msgpack/: LICENSE.txt  README.md  any.zig  array.zig  binary.zig  bool.zig  common.zig  float.zig  headers.zig  int.zig  map.zig  msgpack.zig  null.zig  string.zig  struct.zig  union.zig
proxy/: proxy.py
src/: ClusterMultiIndex.zig  ClusterMultiIndex2.zig  FileIndex.zig  FileSegment.zig  InMemoryIndex.zig  InMemorySegment.zig  Index.zig  Index2.zig  IndexReader.zig  MemorySegment.zig  Metadata.zig  MultiIndex.zig  Oplog.zig  Segment.zig  SegmentList.zig  WaitGroup.zig  api.zig  block.zig  change.zig  client.zig  common.h  common.zig  filefmt.zig  generate_streamvbyte_tables.c  index_manifest.zig  index_redirect.zig  index_tests.zig  jemalloc.zig  legacy_segment_dumper_tool.zig  main.zig  metrics.zig  nats.zig  nats_example.zig  nats_test.zig  restoration.zig  segment.zig  segment_builder_tool.zig  segment_list.zig  segment_list2.zig  segment_merge_policy.zig  (+11 more)
src/fpindex/: base_segment.cpp  base_segment.h  in_memory_segment.cpp  in_memory_segment.h  index.cpp  index.h  index_test.cpp  logging.h  oplog.cpp  oplog.h  oplog_test.cpp  search_result.h  segment.cpp  segment.h  segment_builder.cpp  segment_builder.h  segment_builder_test.cpp  segment_file_format.h  segment_test.cpp  update.h
src/fpindex/io/: database.h  directory.h  file.h  memory_directory.cpp  memory_directory.h  memory_file.cpp  memory_file.h  sqlite.cpp  sqlite.h  sqlite_test.cpp
src/fpindex/proto/: internal.proto
src/fpindex/util/: cleanup.h  cleanup_test.cpp
src/index/: acoustid_document_handler.cpp  acoustid_document_handler.h  acoustid_document_handler_test.cpp  base_index.cpp  base_index.h  collector.h  document.h  document_handler.cpp  document_handler.h  in_memory_index.cpp  in_memory_index.h  in_memory_index_test.cpp  index.cpp  index.h  index_file_deleter.cpp  index_file_deleter.h  index_file_deleter_test.cpp  index_info.cpp  index_info.h  index_info_test.cpp  index_reader.cpp  index_reader.h  index_reader_test.cpp  index_test.cpp  index_utils.h  index_writer.cpp  index_writer.h  index_writer_test.cpp  multi_index.cpp  multi_index.h  multi_index_test.cpp  multi_layer_index.cpp  multi_layer_index.h  multi_layer_index_test.cpp  op.cpp  op.h  op_test.cpp  oplog.cpp  oplog.h  oplog_test.cpp  (+55 more)
src/nats/: client.zig  errors.zig  jetstream.zig  message.zig  protocol.zig  subscription.zig
src/proto/: oplog.proto
src/server/: connection.cpp  connection.h  errors.h  handler.cpp  handler.h  handlers.h  http.cpp  http.h  http_handlers.h  http_test.cpp  listener.cpp  listener.h  main.cpp  metrics.cpp  metrics.h  metrics_server.cpp  metrics_server.h  protocol.cpp  protocol.h  request.cpp  request.h  session.cpp  session.h  session_test.cpp
src/server/grpc/: service.cpp  service.h  service_test.cpp
src/server/http/: request.cpp  request.h  response.cpp  response.h  router.cpp  router.h
src/store/: buffered_input_stream.cpp  buffered_input_stream.h  buffered_input_stream_test.cpp  buffered_output_stream.cpp  buffered_output_stream.h  checksum_input_stream.cpp  checksum_input_stream.h  checksum_output_stream.cpp  checksum_output_stream.h  directory.cpp  directory.h  fs_directory.cpp  fs_directory.h  fs_directory_test.cpp  fs_file.h  fs_input_stream.cpp  fs_input_stream.h  fs_output_stream.cpp  fs_output_stream.h  fs_output_stream_test.cpp  input_stream.cpp  input_stream.h  input_stream_test.cpp  memory_input_stream.cpp  memory_input_stream.h  mmap_input_stream.cpp  mmap_input_stream.h  output_stream.cpp  output_stream.h  output_stream_test.cpp  ram_directory.cpp  ram_directory.h  ram_directory_test.cpp  ram_output_stream.cpp  ram_output_stream.h
src/store/sqlite/: database.cpp  database.h  error.cpp  error.h  result.cpp  result.h  statement.cpp  statement.h
src/tools/: fpdumpindex.cpp  fpi-add.cpp  fpi-import.cpp  fpi-search.cpp  fpi-stats.cpp  fpindex.cpp  fpsearch.cpp  fpstats.cpp
src/util/: defer.h  exceptions.h  exceptions_test.cpp  options.cpp  options.h  options_test.cpp  popcount.h  scoped_ptr.h  search_utils.h  search_utils_test.cpp  test_utils.h  tests.cpp  timer.h  tracing.cpp  tracing.h  vint.h
src/utils/: Deadline.zig  DirectoryLock.zig  Scheduler.zig  WaitGroup.zig  msgpack.zig  shared_ptr.zig  smartptr.zig  tar_stream.zig
src/utils/msgpack/: any.zig  array.zig  binary.zig  bool.zig  int.zig  map.zig  msgpack.zig  msgpack_test.zig  msgpack_test_bool.zig  (+10 more)
tests/: conftest.py  requirements.txt  test_content_negotiation.py  test_fingerprint_api.py  test_index_api.py  test_misc.py  test_parallel_loading.py  test_parallel_loading_metrics.py  test_snapshot_api.py  test_snapshot_restoration.py
(+5 files in other folders)
