[project]
name = "fpindex-cluster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "msgspec>=0.19.0",
    "nats-py>=2.11.0",
]

[project.scripts]
fpindex-cluster = "fpindexcluster.__main__:main"

[tool.uv]
package = true
